# ds_practice

./: .gitignore  README.md  dqc.ipynb  pyproject.toml  quality_check.ipynb  transform.py
.github/workflows/: actions.yml
notebooks/: baseline.ipynb  dqc.ipynb  eda.ipynb  edm.ipynb
src/: transform.py  utils.py  validate.py
src/ds_practice_lopharb/: pipeline.py  transform.py  utils.py  validate_model.py
