[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds_practice_lopharb"
version = "0.0.2"
authors = [{ name = "Ivan Shkel", email = "skillofivan@gmail.com" }]
description = "A small data science edu project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "asarpy>=1.0.1",
    "catboost>=1.2.3",
    "dvc>=3.48.4",
    "scikit-learn>=1.4.1.post1",
    "seaborn>=0.13.2",
    "pandas >= 2.2.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lopharb/ds_practice"
