[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds_practice_lopharb"
version = "0.0.5"
authors = [{ name = "Ivan Shkel", email = "skillofivan@gmail.com" }]
description = "A small data science edu project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["catboost", "dvc", "scikit-learn", "seaborn", "pandas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lopharb/ds_practice"
